--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,6 @@
 version: "3.9"
 
 services:
-  api:
-    container_name: api
-    build: .
-    ports:
-      - 3000:3000
-    env_file:
-      - .env
-    depends_on:
-      db:
-        condition: service_healthy
-    volumes:
-      - .:/app
-
   db:
     container_name: db
     image: postgres:14-alpine
@@ -27,5 +14,17 @@ services:
       timeout: 5s
       retries: 5
       start_period: 5s
-   
 
+  api:
+    container_name: api
+    build: .
+    ports:
+      - 3000:3000
+    env_file:
+      - .env
+    depends_on:
+      db:
+        condition: service_healthy
+        command: bash -c "yarn typeorm migration:run -d ./src/data-source && yarn dev"
+    volumes:
+      - .:/app
