--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,6 @@
 version: "3.9"
 
 services:
-  db:
-    container_name: db
-    image: postgres:14-alpine
-    ports:
-      - 5431:5432
-    env_file:
-      - .env
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 5s
-
   api:
     container_name: api
     build: .
@@ -28,3 +14,17 @@ services:
         command: bash -c "yarn typeorm migration:run -d ./src/data-source && yarn dev"
     volumes:
       - .:/app
+
+  db:
+    container_name: db
+    image: "postgres"
+    ports:
+      - 5431:5432
+    env_file:
+      - .env
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 5s
